# ProtobufStudy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Demo.cpp  ReadMe.md  vcpkg.json
proto/: Localization.proto  Person.proto
triplets/: x64-windows-dynamic.cmake
